fix api.yaml. Generate api interface
