# src/main/java/ru/fds/hrdepartment/controller/AttendanceSheetController.java
@@ -1,10 +1,10 @@
 package ru.fds.hrdepartment.controller;
 
+import io.swagger.api.AttendanceApi;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import ru.fds.hrdepartment.common.converter.dto.impl.AttendanceDtoConverter;
@@ -17,7 +17,7 @@ import javax.validation.Valid;
 
 @RestController
 @RequestMapping("/attendance")
-public class AttendanceSheetController {
+public class AttendanceSheetController implements AttendanceApi{
 
     private final AttendanceSheetService attendanceSheetService;
     private final AttendanceDtoConverter attendanceDtoConverter;
@@ -28,21 +28,26 @@ public class AttendanceSheetController {
         this.attendanceDtoConverter = attendanceDtoConverter;
     }
 
+    @Override
     @GetMapping("/{attendanceId}")
-    public AttendanceSheetDto getAttendance(@PathVariable("attendanceId") Long attendanceId){
-        return attendanceDtoConverter.toDto(attendanceSheetService.getAttendance(attendanceId)
-                .orElseThrow(() -> new NotFoundException("Attendance not found")));
+    public ResponseEntity<AttendanceSheetDto> getAttendance(Long attendanceId) {
+        return ResponseEntity.ok(attendanceDtoConverter.toDto(attendanceSheetService.getAttendance(attendanceId)
+                .orElseThrow(() -> new NotFoundException("Attendance not found"))));
     }
 
+    @Override
     @PostMapping("/new")
-    public AttendanceSheetDto insertAttendance(@Valid @RequestBody AttendanceSheetDto attendanceSheetDto){
+    public ResponseEntity<AttendanceSheetDto> insertAttendance(@Valid AttendanceSheetDto attendanceSheetDto) {
         AttendanceSheet attendanceSheet = attendanceDtoConverter.toEntity(attendanceSheetDto);
-        return attendanceDtoConverter.toDto(attendanceSheetService.insertAttendanceSheet(attendanceSheet));
+        return ResponseEntity.ok(attendanceDtoConverter
+                .toDto(attendanceSheetService.insertAttendanceSheet(attendanceSheet)));
     }
 
+    @Override
     @PutMapping("/update")
-    public AttendanceSheetDto updateAttendance(@Valid @RequestBody AttendanceSheetDto attendanceSheetDto){
+    public ResponseEntity<AttendanceSheetDto> updateAttendance(@Valid AttendanceSheetDto attendanceSheetDto) {
         AttendanceSheet attendanceSheet = attendanceDtoConverter.toEntity(attendanceSheetDto);
-        return attendanceDtoConverter.toDto(attendanceSheetService.updateAttendanceSheet(attendanceSheet));
+        return ResponseEntity.ok(attendanceDtoConverter
+                .toDto(attendanceSheetService.updateAttendanceSheet(attendanceSheet)));
     }
 }
