# src/main/java/ru/fds/hrdepartment/controller/SickLeaveController.java
@@ -1,5 +1,7 @@
 package ru.fds.hrdepartment.controller;
 
+import io.swagger.api.SickApi;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -17,7 +19,7 @@ import javax.validation.Valid;
 
 @RestController
 @RequestMapping("/sick")
-public class SickLeaveController {
+public class SickLeaveController implements SickApi {
 
     private final SickLeaveService sickLeaveService;
     private final SickLeaveDtoConverter sickLeaveDtoConverter;
@@ -28,21 +30,24 @@ public class SickLeaveController {
         this.sickLeaveDtoConverter = sickLeaveDtoConverter;
     }
 
+    @Override
     @GetMapping("/{sickId}")
-    public SickLeaveDto getSickLeave(@PathVariable("sickId") Long sickId){
-        return sickLeaveDtoConverter.toDto(sickLeaveService
-                .getSickLeave(sickId).orElseThrow(() -> new NotFoundException("Sick leave not found")));
+    public ResponseEntity<SickLeaveDto> getSickLeave(@PathVariable("sickId") Long sickId){
+        return ResponseEntity.ok(sickLeaveDtoConverter.toDto(sickLeaveService
+                .getSickLeave(sickId).orElseThrow(() -> new NotFoundException("Sick leave not found"))));
     }
 
+    @Override
     @PostMapping("/new")
-    public SickLeaveDto insertSickLeave(@Valid @RequestBody SickLeaveDto sickLeaveDto){
+    public ResponseEntity<SickLeaveDto> insertSickLeave(@Valid @RequestBody SickLeaveDto sickLeaveDto){
         SickLeave sickLeave = sickLeaveDtoConverter.toEntity(sickLeaveDto);
-        return sickLeaveDtoConverter.toDto(sickLeaveService.insertSickLeave(sickLeave));
+        return ResponseEntity.ok(sickLeaveDtoConverter.toDto(sickLeaveService.insertSickLeave(sickLeave)));
     }
 
+    @Override
     @PutMapping("/update")
-    public SickLeaveDto updateSickLeave(@Valid @RequestBody SickLeaveDto sickLeaveDto){
+    public ResponseEntity<SickLeaveDto> updateSickLeave(@Valid @RequestBody SickLeaveDto sickLeaveDto){
         SickLeave sickLeave = sickLeaveDtoConverter.toEntity(sickLeaveDto);
-        return sickLeaveDtoConverter.toDto(sickLeaveService.updateSickLeave(sickLeave));
+        return ResponseEntity.ok(sickLeaveDtoConverter.toDto(sickLeaveService.updateSickLeave(sickLeave)));
     }
 }
