# src/main/java/ru/fds/hrdepartment/controller/VacationController.java
@@ -1,5 +1,7 @@
 package ru.fds.hrdepartment.controller;
 
+import io.swagger.api.VacationApi;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -18,7 +20,7 @@ import javax.validation.Valid;
 
 @RestController
 @RequestMapping("/vacation")
-public class VacationController {
+public class VacationController implements VacationApi {
 
     private final VacationService vacationService;
     private final VacationDtoConverter vacationDtoConverter;
@@ -29,27 +31,31 @@ public class VacationController {
         this.vacationDtoConverter = vacationDtoConverter;
     }
 
+    @Override
     @GetMapping("/{vacationId}")
-    public VacationDto getVacation(@PathVariable("vacationId") Long vacationId){
-        return vacationDtoConverter.toDto(vacationService
-                .getVacation(vacationId).orElseThrow(() -> new NotFoundException("Vacation not found")));
+    public ResponseEntity<VacationDto> getVacation(@PathVariable("vacationId") Long vacationId){
+        return ResponseEntity.ok(vacationDtoConverter.toDto(vacationService
+                .getVacation(vacationId).orElseThrow(() -> new NotFoundException("Vacation not found"))));
     }
 
+    @Override
     @PostMapping("/new")
-    public VacationDto insertVacation(@Valid @RequestBody VacationDto vacationDto){
+    public ResponseEntity<VacationDto> insertVacation(@Valid @RequestBody VacationDto vacationDto){
         Vacation vacation = vacationDtoConverter.toEntity(vacationDto);
-        return vacationDtoConverter.toDto(vacationService.insertVacation(vacation));
+        return ResponseEntity.ok(vacationDtoConverter.toDto(vacationService.insertVacation(vacation)));
     }
 
+    @Override
     @PutMapping("/update")
-    public VacationDto updateVacation(@Valid @RequestBody VacationDto vacationDto){
+    public ResponseEntity<VacationDto> updateVacation(@Valid @RequestBody VacationDto vacationDto){
         Vacation vacation = vacationDtoConverter.toEntity(vacationDto);
-        return vacationDtoConverter.toDto(vacationService.updateVacation(vacation));
+        return ResponseEntity.ok(vacationDtoConverter.toDto(vacationService.updateVacation(vacation)));
     }
 
+    @Override
     @GetMapping("/employee_last")
-    public VacationDto getLastVacationByEmployee(@RequestParam("employeeId") Long employeeId){
-        return vacationDtoConverter.toDto(vacationService
-                .getLastVacationByEmployee(employeeId).orElseThrow(() -> new NotFoundException("Vacation not found")));
+    public ResponseEntity<VacationDto> getLastVacationByEmployee(@RequestParam("employeeId") Long employeeId){
+        return ResponseEntity.ok(vacationDtoConverter.toDto(vacationService
+                .getLastVacationByEmployee(employeeId).orElseThrow(() -> new NotFoundException("Vacation not found"))));
     }
 }
