# src/main/resources/api.yaml
@@ -11,27 +11,25 @@ info:
 host: 'localhost:8080'
 basePath: /
 tags:
-  - name: attendance-sheet-controller
+  - name: attendanceSheetController
     description: Attendance Sheet Controller
-  - name: basic-error-controller
-    description: Basic Error Controller
-  - name: department-controller
+  - name: departmentController
     description: Department Controller
-  - name: employee-controller
+  - name: employeeController
     description: Employee Controller
-  - name: position-controller
+  - name: positionController
     description: Position Controller
-  - name: sick-leave-controller
+  - name: sickLeaveController
     description: Sick Leave Controller
-  - name: vacation-controller
+  - name: vacationController
     description: Vacation Controller
 paths:
   /attendance/new:
     post:
       tags:
-        - attendance-sheet-controller
-      summary: insertAttendance
-      operationId: insertAttendanceUsingPOST
+        - attendanceSheetController
+      summary: insert new attendance
+      operationId: insertAttendance
       consumes:
         - application/json
       produces:
@@ -60,9 +58,9 @@ paths:
   /attendance/update:
     put:
       tags:
-        - attendance-sheet-controller
-      summary: updateAttendance
-      operationId: updateAttendanceUsingPUT
+        - attendanceSheetController
+      summary: update attendance
+      operationId: updateAttendance
       consumes:
         - application/json
       produces:
@@ -91,9 +89,9 @@ paths:
   '/attendance/{attendanceId}':
     get:
       tags:
-        - attendance-sheet-controller
-      summary: getAttendance
-      operationId: getAttendanceUsingGET
+        - attendanceSheetController
+      summary: get attendance by id
+      operationId: getAttendance
       produces:
         - '*/*'
       parameters:
@@ -118,9 +116,9 @@ paths:
   /dep/new:
     post:
       tags:
-        - department-controller
-      summary: insertDepartment
-      operationId: insertDepartmentUsingPOST
+        - departmentController
+      summary: insert new department
+      operationId: insertDepartment
       consumes:
         - application/json
       produces:
@@ -149,9 +147,9 @@ paths:
   /dep/total_hour:
     get:
       tags:
-        - department-controller
-      summary: getWorkHoursInDepartment
-      operationId: getWorkHoursInDepartmentUsingGET
+        - departmentController
+      summary: get total work hours in department today
+      operationId: getWorkHoursInDepartment
       produces:
         - '*/*'
       parameters:
@@ -177,9 +175,9 @@ paths:
   /dep/update:
     put:
       tags:
-        - department-controller
-      summary: updateDepartment
-      operationId: updateDepartmentUsingPUT
+        - departmentController
+      summary: update department
+      operationId: updateDepartment
       consumes:
         - application/json
       produces:
@@ -208,9 +206,9 @@ paths:
   /emp/all_days:
     get:
       tags:
-        - employee-controller
-      summary: getWorkDaysByEmployee
-      operationId: getWorkDaysByEmployeeUsingGET
+        - employeeController
+      summary: get total work days for employee
+      operationId: getWorkDaysByEmployee
       produces:
         - '*/*'
       parameters:
@@ -236,9 +234,9 @@ paths:
   /emp/date/absence:
     get:
       tags:
-        - employee-controller
-      summary: getEmployeesDateInAbsence
-      operationId: getEmployeesDateInAbsenceUsingGET
+        - employeeController
+      summary: get employees in absence on specified date
+      operationId: getEmployeesDateInAbsence
       produces:
         - '*/*'
       parameters:
@@ -265,9 +263,9 @@ paths:
   /emp/date/at_work:
     get:
       tags:
-        - employee-controller
-      summary: getEmployeesDateAtWork
-      operationId: getEmployeesDateAtWorkUsingGET
+        - employeeController
+      summary: get employees at work in specified date
+      operationId: getEmployeesDateAtWork
       produces:
         - '*/*'
       parameters:
@@ -294,9 +292,9 @@ paths:
   /emp/date/on_sick_leave:
     get:
       tags:
-        - employee-controller
-      summary: getEmployeesDateOnSickLeave
-      operationId: getEmployeesDateOnSickLeaveUsingGET
+        - employeeController
+      summary: get employees on sick leave at specified date
+      operationId: getEmployeesDateOnSickLeave
       produces:
         - '*/*'
       parameters:
@@ -323,9 +321,9 @@ paths:
   /emp/date/on_vacation:
     get:
       tags:
-        - employee-controller
-      summary: getEmployeesDateOnVacation
-      operationId: getEmployeesDateOnVacationUsingGET
+        - employeeController
+      summary: get employees on vacation at specified date
+      operationId: getEmployeesDateOnVacation
       produces:
         - '*/*'
       parameters:
@@ -352,9 +350,9 @@ paths:
   /emp/delete:
     delete:
       tags:
-        - employee-controller
-      summary: deleteEmployee
-      operationId: deleteEmployeeUsingDELETE
+        - employeeController
+      summary: delete employee
+      operationId: deleteEmployee
       produces:
         - '*/*'
       parameters:
@@ -377,9 +375,9 @@ paths:
   /emp/new:
     post:
       tags:
-        - employee-controller
-      summary: insertEmployee
-      operationId: insertEmployeeUsingPOST
+        - employeeController
+      summary: insert new employee
+      operationId: insertEmployee
       consumes:
         - application/json
       produces:
@@ -408,9 +406,9 @@ paths:
   /emp/now/absence:
     get:
       tags:
-        - employee-controller
-      summary: getEmployeesNowInAbsence
-      operationId: getEmployeesNowInAbsenceUsingGET
+        - employeeController
+      summary: get employees in absence now
+      operationId: getEmployeesNowInAbsence
       produces:
         - '*/*'
       responses:
@@ -430,9 +428,9 @@ paths:
   /emp/now/at_work:
     get:
       tags:
-        - employee-controller
-      summary: getEmployeesNowAtWork
-      operationId: getEmployeesNowAtWorkUsingGET
+        - employeeController
+      summary: get employees at work now
+      operationId: getEmployeesNowAtWork
       produces:
         - '*/*'
       responses:
@@ -452,9 +450,9 @@ paths:
   /emp/now/on_sick_leave:
     get:
       tags:
-        - employee-controller
-      summary: getEmployeesNowOnSickLeave
-      operationId: getEmployeesNowOnSickLeaveUsingGET
+        - employeeController
+      summary: get employees on sick leave now
+      operationId: getEmployeesNowOnSickLeave
       produces:
         - '*/*'
       responses:
@@ -474,9 +472,9 @@ paths:
   /emp/now/on_vacation:
     get:
       tags:
-        - employee-controller
-      summary: getEmployeesNowOnVacation
-      operationId: getEmployeesNowOnVacationUsingGET
+        - employeeController
+      summary: get employees on vacation now
+      operationId: getEmployeesNowOnVacation
       produces:
         - '*/*'
       responses:
@@ -496,9 +494,9 @@ paths:
   /emp/update:
     put:
       tags:
-        - employee-controller
-      summary: updateEmployee
-      operationId: updateEmployeeUsingPUT
+        - employeeController
+      summary: update employee
+      operationId: updateEmployee
       consumes:
         - application/json
       produces:
@@ -527,9 +525,9 @@ paths:
   '/emp/{employeeId}':
     get:
       tags:
-        - employee-controller
-      summary: getEmployee
-      operationId: getEmployeeUsingGET
+        - employeeController
+      summary: get employee by id
+      operationId: getEmployee
       produces:
         - '*/*'
       parameters:
@@ -551,160 +549,12 @@ paths:
         '404':
           description: Not Found
       deprecated: false
-  /error:
-    get:
-      tags:
-        - basic-error-controller
-      summary: errorHtml
-      operationId: errorHtmlUsingGET
-      produces:
-        - text/html
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/ModelAndView'
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      deprecated: false
-    head:
-      tags:
-        - basic-error-controller
-      summary: errorHtml
-      operationId: errorHtmlUsingHEAD
-      consumes:
-        - application/json
-      produces:
-        - text/html
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/ModelAndView'
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-      deprecated: false
-    post:
-      tags:
-        - basic-error-controller
-      summary: errorHtml
-      operationId: errorHtmlUsingPOST
-      consumes:
-        - application/json
-      produces:
-        - text/html
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/ModelAndView'
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      deprecated: false
-    put:
-      tags:
-        - basic-error-controller
-      summary: errorHtml
-      operationId: errorHtmlUsingPUT
-      consumes:
-        - application/json
-      produces:
-        - text/html
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/ModelAndView'
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      deprecated: false
-    delete:
-      tags:
-        - basic-error-controller
-      summary: errorHtml
-      operationId: errorHtmlUsingDELETE
-      produces:
-        - text/html
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/ModelAndView'
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-      deprecated: false
-    options:
-      tags:
-        - basic-error-controller
-      summary: errorHtml
-      operationId: errorHtmlUsingOPTIONS
-      consumes:
-        - application/json
-      produces:
-        - text/html
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/ModelAndView'
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-      deprecated: false
-    patch:
-      tags:
-        - basic-error-controller
-      summary: errorHtml
-      operationId: errorHtmlUsingPATCH
-      consumes:
-        - application/json
-      produces:
-        - text/html
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/ModelAndView'
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-      deprecated: false
   /position/new:
     post:
       tags:
-        - position-controller
-      summary: insertPosition
-      operationId: insertPositionUsingPOST
+        - positionController
+      summary: insert new position
+      operationId: insertPosition
       consumes:
         - application/json
       produces:
@@ -733,9 +583,9 @@ paths:
   /position/update:
     put:
       tags:
-        - position-controller
-      summary: updatePosition
-      operationId: updatePositionUsingPUT
+        - positionController
+      summary: update position
+      operationId: updatePosition
       consumes:
         - application/json
       produces:
@@ -764,9 +614,9 @@ paths:
   '/position/{positionId}':
     get:
       tags:
-        - position-controller
-      summary: getPosition
-      operationId: getPositionUsingGET
+        - positionController
+      summary: get position by id
+      operationId: getPosition
       produces:
         - '*/*'
       parameters:
@@ -791,9 +641,9 @@ paths:
   /sick/new:
     post:
       tags:
-        - sick-leave-controller
-      summary: insertSickLeave
-      operationId: insertSickLeaveUsingPOST
+        - sickLeaveController
+      summary: insert new sick leave
+      operationId: insertSickLeave
       consumes:
         - application/json
       produces:
@@ -822,9 +672,9 @@ paths:
   /sick/update:
     put:
       tags:
-        - sick-leave-controller
-      summary: updateSickLeave
-      operationId: updateSickLeaveUsingPUT
+        - sickLeaveController
+      summary: update sick leave
+      operationId: updateSickLeave
       consumes:
         - application/json
       produces:
@@ -853,9 +703,9 @@ paths:
   '/sick/{sickId}':
     get:
       tags:
-        - sick-leave-controller
-      summary: getSickLeave
-      operationId: getSickLeaveUsingGET
+        - sickLeaveController
+      summary: get sick leave by id
+      operationId: getSickLeave
       produces:
         - '*/*'
       parameters:
@@ -880,9 +730,9 @@ paths:
   /vacation/employee_last:
     get:
       tags:
-        - vacation-controller
-      summary: getLastVacationByEmployee
-      operationId: getLastVacationByEmployeeUsingGET
+        - vacationController
+      summary: get last vacation by employee
+      operationId: getLastVacationByEmployee
       produces:
         - '*/*'
       parameters:
@@ -907,9 +757,9 @@ paths:
   /vacation/new:
     post:
       tags:
-        - vacation-controller
-      summary: insertVacation
-      operationId: insertVacationUsingPOST
+        - vacationController
+      summary: insert new Vacation
+      operationId: insertVacation
       consumes:
         - application/json
       produces:
@@ -938,9 +788,9 @@ paths:
   /vacation/update:
     put:
       tags:
-        - vacation-controller
-      summary: updateVacation
-      operationId: updateVacationUsingPUT
+        - vacationController
+      summary: update vacation
+      operationId: updateVacation
       consumes:
         - application/json
       produces:
@@ -969,9 +819,9 @@ paths:
   '/vacation/{vacationId}':
     get:
       tags:
-        - vacation-controller
-      summary: getVacation
-      operationId: getVacationUsingGET
+        - vacationController
+      summary: get vacation by id
+      operationId: getVacation
       produces:
         - '*/*'
       parameters:
@@ -1049,95 +899,6 @@ definitions:
         type: integer
         format: int64
     title: EmployeeDto
-  ModelAndView:
-    type: object
-    properties:
-      empty:
-        type: boolean
-      model:
-        type: object
-      modelMap:
-        type: object
-        additionalProperties:
-          type: object
-      reference:
-        type: boolean
-      status:
-        type: string
-        enum:
-          - 100 CONTINUE
-          - 101 SWITCHING_PROTOCOLS
-          - 102 PROCESSING
-          - 103 CHECKPOINT
-          - 200 OK
-          - 201 CREATED
-          - 202 ACCEPTED
-          - 203 NON_AUTHORITATIVE_INFORMATION
-          - 204 NO_CONTENT
-          - 205 RESET_CONTENT
-          - 206 PARTIAL_CONTENT
-          - 207 MULTI_STATUS
-          - 208 ALREADY_REPORTED
-          - 226 IM_USED
-          - 300 MULTIPLE_CHOICES
-          - 301 MOVED_PERMANENTLY
-          - 302 FOUND
-          - 302 MOVED_TEMPORARILY
-          - 303 SEE_OTHER
-          - 304 NOT_MODIFIED
-          - 305 USE_PROXY
-          - 307 TEMPORARY_REDIRECT
-          - 308 PERMANENT_REDIRECT
-          - 400 BAD_REQUEST
-          - 401 UNAUTHORIZED
-          - 402 PAYMENT_REQUIRED
-          - 403 FORBIDDEN
-          - 404 NOT_FOUND
-          - 405 METHOD_NOT_ALLOWED
-          - 406 NOT_ACCEPTABLE
-          - 407 PROXY_AUTHENTICATION_REQUIRED
-          - 408 REQUEST_TIMEOUT
-          - 409 CONFLICT
-          - 410 GONE
-          - 411 LENGTH_REQUIRED
-          - 412 PRECONDITION_FAILED
-          - 413 PAYLOAD_TOO_LARGE
-          - 413 REQUEST_ENTITY_TOO_LARGE
-          - 414 URI_TOO_LONG
-          - 414 REQUEST_URI_TOO_LONG
-          - 415 UNSUPPORTED_MEDIA_TYPE
-          - 416 REQUESTED_RANGE_NOT_SATISFIABLE
-          - 417 EXPECTATION_FAILED
-          - 418 I_AM_A_TEAPOT
-          - 419 INSUFFICIENT_SPACE_ON_RESOURCE
-          - 420 METHOD_FAILURE
-          - 421 DESTINATION_LOCKED
-          - 422 UNPROCESSABLE_ENTITY
-          - 423 LOCKED
-          - 424 FAILED_DEPENDENCY
-          - 425 TOO_EARLY
-          - 426 UPGRADE_REQUIRED
-          - 428 PRECONDITION_REQUIRED
-          - 429 TOO_MANY_REQUESTS
-          - 431 REQUEST_HEADER_FIELDS_TOO_LARGE
-          - 451 UNAVAILABLE_FOR_LEGAL_REASONS
-          - 500 INTERNAL_SERVER_ERROR
-          - 501 NOT_IMPLEMENTED
-          - 502 BAD_GATEWAY
-          - 503 SERVICE_UNAVAILABLE
-          - 504 GATEWAY_TIMEOUT
-          - 505 HTTP_VERSION_NOT_SUPPORTED
-          - 506 VARIANT_ALSO_NEGOTIATES
-          - 507 INSUFFICIENT_STORAGE
-          - 508 LOOP_DETECTED
-          - 509 BANDWIDTH_LIMIT_EXCEEDED
-          - 510 NOT_EXTENDED
-          - 511 NETWORK_AUTHENTICATION_REQUIRED
-      view:
-        $ref: '#/definitions/View'
-      viewName:
-        type: string
-    title: ModelAndView
   PositionDto:
     type: object
     properties:
@@ -1190,9 +951,3 @@ definitions:
           - ANNUAL_VACATION
           - ADDITIONAL_VACATION
     title: VacationDto
-  View:
-    type: object
-    properties:
-      contentType:
-        type: string
-    title: View
